- Added wxTB_NODIVIDER and wxTB_NOALIGN so native toolbar can be used in FL
- Multiline labels in buttons are now supoprted (simply use "\n" in the label)
- Implemented wxMouseCaptureChangedEvent and made wxGenericDragImage check it
  has the capture before release it.
- fixed bugs in multiple selection wxCheckListBox
- default button handling is now closer to expected

wxGTK:

- wxDirDialog now presents the file system in standard Unix way
- wxButton now honours wxBU_EXACTFIT
- wxStaticBox now honours wxALIGN_XXX styles
- added support for non alphanumeric simple character accelerators ('-', '=')
- new behaviour for wxWindow::Refresh() as it now produces a delayed refresh. 
  Call the new wxWindow::Update() to force an immediate update
- support for more SGI hardware (12-bit mode among others)
- fixed wxDC::Blit() to honour source DC's logical coordinates
- implemented wxIdleEvent::RequestMore() for simple background tasks
- implemented wxChoice::Delete()
- fixed bad memory leak in wxFileDialog (Chris Elliott)

wxHTML:

- fixed wxHtmlHelpController's cache files handling on big endian machines
- added blocking and redirecting capabilities to wxHtmlWindow via
  wxHtmlWindow::OnOpeningURL()
- fixed alignment handling in tables
- fixed <font face="..."> handling to be case insensitive

2.3.2
-----

New port: wxUniv for Win32/GTK+ is now included in the distribution.

wxBase:

- wxRegEx class added
- wxGetDiskSpace() function added (Jonothan Farr, Markus Fieber)
- wxTextBuffer and wxTextFile(wxStream) added (Morten Hanssen)
- more fixes to wxMBConv classes. Conversion to and from wchar_t now works with
  glibc 2.2 as well as with glibc 2.1. Unix version now checks for iconv()'s
  capabilities at runtime instead of in the configure script.

All (GUI):

- support for virtual list control added
- column images in report mode of the list control
- wxFindReplaceDialog added (based on work of Markus Greither)
- wxTextCtrl::SetMaxLength() added (wxMSW/wxGTK)